kubernetes/elasticserch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: elasticserch
  name: elasticserch
  namespace: otk
spec:
  ports:
  - name: "2022"
    port: 2022
    targetPort: 9200
  selector:
    app: elasticserch
status:
  loadBalancer: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticserch
  name: elasticserch
  namespace: otk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticserch
  strategy: {}
  template:
    metadata:
      labels:
        app: elasticserch
    spec:
      containers:
      - env:
        - name: discovery.type
          valueFrom:
           configMapKeyRef:
            name: elasticsearch-config
            key: discovery.type
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
        imagePullPolicy: "IfNotPresent"
        name: elasticserch
        ports:
        - containerPort: 9200
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      #volumes: null
status: {}
