kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: otk
spec:
  ports:
  - name: "2000"
    port: 2000
    targetPort: 80
  selector:
    app: frontend
status:
  loadBalancer: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: otk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      volumes:
      - name: otk-html-pv-volume
        persistentVolumeClaim:
          claimName: otk-html-pv-claim
      containers:
      - env:
        - name: BASE_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: BASE_URL
        - name: CMS_SERVICE_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: CMS_SERVICE_URL
        - name: TERM_SERVICE_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: TERM_SERVICE_URL
        - name: DISCUSSION_SERVICE_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: DISCUSSION_SERVICE_URL
        - name: KC_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: KC_URL
        - name: KC_REALM
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: KC_REALM
        - name: KC_CLIENTID
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: KC_CLIENTID
        - name: ETB_URL
          valueFrom:
           configMapKeyRef:
            name: frontend-config
            key: ETB_URL
        image: eurotermbank.azurecr.io/otk-frontend:40496
        imagePullPolicy: "Always"
        name: frontend
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/usr/share/nginx/html/assets/overrides"
          name: otk-html-pv-volume
        resources: {}
      imagePullSecrets:
        - name: dregsecret
      restartPolicy: Always
      serviceAccountName: ""
      #volumes: null
status: {}
